# opt-modeling-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yaml
docs/: api.rst  bkp_index.rst  conf.py  index.rst  modeling.rst
docs/_static/: custom.css
docs/chapters/: advanced_problems.rst  assignment_problems.rst  bkp_index.rst  index.rst  network_problems.rst  scheduling_problems.rst  selection_problems.rst
docs/problems/: assignment.rst  balanced_unbalanced.rst  captial_budgeting.rst  facility_location.rst  generalized_assignment.rst  index.rst  knapsack.rst  matching_problem.rst  maximum_coverage.rst  multiassignment.rst  set_cover.rst  set_packing.rst  set_partitioning.rst  transportation.rst  vertex_coverig.rst
notebooks/: 01_knapsack.ipynb  02_assignment.ipynb  03_facilitylocation.ipynb  04_setcover.ipynb  05_setpacking.ipynb  06_setpartitioning.ipynb  07_maxcover.ipynb  08_captialbudgeting.ipynb  09_vertexcovering.ipynb  assignment_balancedunbalanced.ipynb  assignment_generalizedassignment.ipynb  assignment_matchingproblem.ipynb  assignment_multiassignment.ipynb  assignment_transportation.ipynb
src/optilab/: __init__.py  aliases.py
